-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b103
-
Verified
Still seeing the same crash, for example with compiler/compilercontrol/directives/CompileOnlyTest.java
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000000102409dc0, pid=75962, tid=6147
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-10-192945.cthaling.aot)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-10-192945.cthaling.aot, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, bsd-amd64)
# Problematic frame:
# V [libjvm.dylib+0x3b6dc0] DirectivesStack::getMatchingDirective(methodHandle, AbstractCompiler*)+0x278
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Stack: [0x000000010325e000,0x000000010335e000], sp=0x000000010335d190, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x3b6dc0] DirectivesStack::getMatchingDirective(methodHandle, AbstractCompiler*)+0x278
V [libjvm.dylib+0x3a97d3] CompileBroker::compilation_is_prohibited(methodHandle const&, int, int)+0x21b
V [libjvm.dylib+0x3a909d] CompileBroker::compile_method(methodHandle const&, int, int, methodHandle const&, int, char const*, Thread*)+0x1f5
V [libjvm.dylib+0xabd13f] WB_EnqueueMethodForCompilation+0x350
j sun.hotspot.WhiteBox.enqueueMethodForCompilation0(Ljava/lang/reflect/Executable;II)Z+0
j sun.hotspot.WhiteBox.enqueueMethodForCompilation(Ljava/lang/reflect/Executable;II)Z+9
j sun.hotspot.WhiteBox.enqueueMethodForCompilation(Ljava/lang/reflect/Executable;I)Z+4
j compiler.compilercontrol.share.actions.CompileAction.checkCompilation(Ljava/lang/reflect/Executable;IZ)V+9
j compiler.compilercontrol.share.actions.CompileAction.checkCompiled(Ljava/lang/reflect/Executable;Lcompiler/compilercontrol/share/scenario/State;)V+42
j compiler.compilercontrol.share.actions.BaseAction.lambda$check$2(Ljava/util/Map;Ljdk/test/lib/Pair;)V+19
j compiler.compilercontrol.share.actions.BaseAction$$Lambda$49.accept(Ljava/lang/Object;)V+8
j java.util.ArrayList.forEach(Ljava/util/function/Consumer;)V+44
j compiler.compilercontrol.share.actions.BaseAction.check(Ljava/util/Map;)V+9
j compiler.compilercontrol.share.actions.BaseAction.communicate([Ljava/lang/String;)V+252
j compiler.compilercontrol.share.actions.BaseAction.main([Ljava/lang/String;)V+8
v ~StubRoutines::call_stub
V [libjvm.dylib+0x5ad751] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x83b
V [libjvm.dylib+0x607b3f] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*)+0x2ee
V [libjvm.dylib+0x60d311] jni_CallStaticVoidMethod+0x2ed
C [java+0x4577] JavaMain+0xa63
C [libsystem_c.dylib+0x14772] _pthread_start+0x147
C [libsystem_c.dylib+0x11a1] thread_start+0xd
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000000102409dc0, pid=75962, tid=6147
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-10-192945.cthaling.aot)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-10-192945.cthaling.aot, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, bsd-amd64)
# Problematic frame:
# V [libjvm.dylib+0x3b6dc0] DirectivesStack::getMatchingDirective(methodHandle, AbstractCompiler*)+0x278
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Stack: [0x000000010325e000,0x000000010335e000], sp=0x000000010335d190, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x3b6dc0] DirectivesStack::getMatchingDirective(methodHandle, AbstractCompiler*)+0x278
V [libjvm.dylib+0x3a97d3] CompileBroker::compilation_is_prohibited(methodHandle const&, int, int)+0x21b
V [libjvm.dylib+0x3a909d] CompileBroker::compile_method(methodHandle const&, int, int, methodHandle const&, int, char const*, Thread*)+0x1f5
V [libjvm.dylib+0xabd13f] WB_EnqueueMethodForCompilation+0x350
j sun.hotspot.WhiteBox.enqueueMethodForCompilation0(Ljava/lang/reflect/Executable;II)Z+0
j sun.hotspot.WhiteBox.enqueueMethodForCompilation(Ljava/lang/reflect/Executable;II)Z+9
j sun.hotspot.WhiteBox.enqueueMethodForCompilation(Ljava/lang/reflect/Executable;I)Z+4
j compiler.compilercontrol.share.actions.CompileAction.checkCompilation(Ljava/lang/reflect/Executable;IZ)V+9
j compiler.compilercontrol.share.actions.CompileAction.checkCompiled(Ljava/lang/reflect/Executable;Lcompiler/compilercontrol/share/scenario/State;)V+42
j compiler.compilercontrol.share.actions.BaseAction.lambda$check$2(Ljava/util/Map;Ljdk/test/lib/Pair;)V+19
j compiler.compilercontrol.share.actions.BaseAction$$Lambda$49.accept(Ljava/lang/Object;)V+8
j java.util.ArrayList.forEach(Ljava/util/function/Consumer;)V+44
j compiler.compilercontrol.share.actions.BaseAction.check(Ljava/util/Map;)V+9
j compiler.compilercontrol.share.actions.BaseAction.communicate([Ljava/lang/String;)V+252
j compiler.compilercontrol.share.actions.BaseAction.main([Ljava/lang/String;)V+8
v ~StubRoutines::call_stub
V [libjvm.dylib+0x5ad751] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x83b
V [libjvm.dylib+0x607b3f] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*)+0x2ee
V [libjvm.dylib+0x60d311] jni_CallStaticVoidMethod+0x2ed
C [java+0x4577] JavaMain+0xa63
C [libsystem_c.dylib+0x14772] _pthread_start+0x147
C [libsystem_c.dylib+0x11a1] thread_start+0xd
- relates to
-
JDK-8140343 SEGV in DirectivesStack::getMatchingDirective
-
- Closed
-