8145328: SEGV in DirectivesStack::getMatchingDirective

Loop until enabled directive is found

Reviewed-by: kvn, twisti